# ag-izleme

./: .gitignore  LICENSE  README.md  SECURITY.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/agizleme/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/agizleme/: MainActivity.kt  NetworkLogState.kt  NetworkMonitorService.kt  RustBridge.kt
app/src/main/java/com/example/agizleme/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/agizleme/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust_core/: Cargo.toml
rust_core/src/: lib.rs
