[package]
name = "rust_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "agizleme"
crate-type = ["cdylib"]

[dependencies]
jni            = "0.21.1"
pnet           = "0.34.0"
dns-lookup     = "2.0.4"
android_logger = "0.13.0"
log            = "0.4.20"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
md-5           = "0.10.6"